Made all of the models immutable