@@ -2,10 +2,10 @@ package com.danielflower.crickam.scorer;
 
 import com.danielflower.crickam.scorer.data.Australia;
 import com.danielflower.crickam.scorer.data.NewZealand;
+import com.danielflower.crickam.utils.ImmutableList;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
-import java.util.List;
 import java.util.UUID;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -25,7 +25,7 @@ class MatchTest {
             .withNumberOfInningsPerTeam(1)
             .withOversPerInnings(50)
             .withStartTime(Instant.now())
-            .withTeams(List.of(NewZealand.oneDayLineUp().build(), Australia.oneDayLineUp().withPlayingAtHome(false).build()))
+            .withTeams(ImmutableList.of(NewZealand.oneDayLineUp().build(), Australia.oneDayLineUp().withPlayingAtHome(false).build()))
             .withVenue(VenueTest.aVenue().build())
             ;
     }
